# languize

./: README.md  pyproject.toml  vocab.db
app/: main.py
app/api/: routes.py  schemas.py
app/db/: models.py  session.py
app/services/: sm2_logic.py  vocab_logic.py
app/utils/: gemini.py  sm2.py
static/: style.css
templates/: learn.html
